# philosphyMCP

./: .env  README.md  pyproject.toml
.claude/: settings.local.json
agent/: __init__.py  _mcp.py  gemini_runner.py  prompts.py  runner.py
mcp_server/: __init__.py  http_server.py  server.py
mcp_server/tools/: __init__.py  philpapers.py  sep.py  wikidata.py
tests/: test_philpapers.py  test_sep.py  test_wikidata.py
