[project]
name = "philosophy-agent"
version = "0.1.0"
description = "A philosophy agent with an MCP server backend grounded in SEP, PhilPapers, and Wikidata."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "anthropic>=0.30.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
    "starlette>=1.3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
gemini = ["google-genai>=1.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server", "agent"]
